tests/compile/attributes/test/fail/invalid_runtime_arg.rs
#[sewage::test(runtime)]
fn run() {}

#[sewage::test(tokio)]
fn run_tokio() {}

fn main() {}
